Add navigation links for various sections

--- a/index.html
+++ b/index.html
@@ -138,10 +138,14 @@
   <nav>
     <div class="logo">Giancarla Burgos</div>
     <div>
-      <a href="#work">Work</a>
+      <a href="computer-architecture.html">Computer Architecture</a>
+      <a href="circuits.html">Circuits</a>
+      <a href="product-management.html">Product Management</a>
+      <a href="personal-projects.html">Personal Projects</a>
       <a href="mailto:gburgos@harvard.college.edu">Contact</a>
     </div>
   </nav>
+
 
   <section class="hero">
     <h1>
