Enhance HTML structure and styling for computer architecture page
Added responsive meta tag and improved styling for navigation and content sections.

--- a/computer-architecture.html
+++ b/computer-architecture.html
@@ -1,13 +1,265 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Computer Architecture | Giancarla Burgos</title>
-</head>
-<body>
-  <h1>Computer Architecture</h1>
-  <p>Detailed projects and coursework coming soon.</p>
 
-  <p><a href="index.html">← Back to Home</a></p>
+  <style>
+    :root {
+      --primary: #6D28D9;   /* deep purple */
+      --bg: #ffffff;
+      --muted: #666;
+      --border: #eee;
+    }
+
+    * { box-sizing: border-box; }
+
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, sans-serif;
+      background: var(--bg);
+      color: #111;
+    }
+
+    /* NAV (matches Home) */
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 24px 48px;
+      border-bottom: 1px solid var(--border);
+      gap: 24px;
+      flex-wrap: wrap;
+    }
+
+    nav a {
+      text-decoration: none;
+      note: none;
+      color: #111;
+      margin-right: 18px;
+      font-weight: 600;
+      white-space: nowrap;
+    }
+
+    nav a:last-child { margin-right: 0; }
+
+    .nav-left { display: flex; align-items: center; flex-wrap: wrap; }
+    .nav-right { display: flex; align-items: center; gap: 16px; }
+
+    .nav-right a {
+      border: 2px solid var(--primary);
+      color: var(--primary);
+      padding: 10px 14px;
+      border-radius: 10px;
+      font-weight: 700;
+    }
+
+    .nav-right a:hover {
+      background: var(--primary);
+      color: white;
+    }
+
+    /* PAGE */
+    .wrap {
+      max-width: 1050px;
+      margin: 64px auto 0;
+      padding: 0 24px 80px;
+    }
+
+    .title {
+      text-align: center;
+      margin-top: 56px;
+    }
+
+    .title h1 {
+      font-size: clamp(2.2rem, 4.5vw, 3.4rem);
+      line-height: 1.12;
+      margin: 0 0 14px;
+    }
+
+    .title h1 span { color: var(--primary); }
+
+    .title p {
+      margin: 0 auto;
+      max-width: 780px;
+      color: var(--muted);
+      font-size: 1.08rem;
+      line-height: 1.7;
+    }
+
+    .card {
+      margin: 40px auto 0;
+      max-width: 980px;
+      border: 1px solid var(--border);
+      border-radius: 16px;
+      padding: 26px;
+    }
+
+    .card h2 {
+      margin: 0 0 8px;
+      font-size: 1.35rem;
+    }
+
+    .meta {
+      color: var(--muted);
+      margin: 0 0 16px;
+      line-height: 1.6;
+    }
+
+    .pillrow { display: flex; gap: 10px; flex-wrap: wrap; margin: 14px 0 18px; }
+
+    .pill {
+      border: 1px solid var(--border);
+      padding: 8px 12px;
+      border-radius: 999px;
+      font-weight: 650;
+      color: #222;
+      background: #fafafa;
+      font-size: 0.92rem;
+    }
+
+    pre {
+      margin: 0;
+      padding: 16px;
+      border-radius: 14px;
+      border: 1px solid var(--border);
+      background: #0b0b0f;
+      color: #f3f3f3;
+      overflow: auto;
+      line-height: 1.5;
+      font-size: 0.92rem;
+    }
+
+    .back {
+      display: inline-block;
+      margin-top: 22px;
+      color: var(--primary);
+      font-weight: 800;
+      text-decoration: none;
+    }
+
+    .back:hover { text-decoration: underline; }
+
+    footer {
+      margin-top: 56px;
+      text-align: center;
+      color: #888;
+      font-size: 0.95rem;
+    }
+  </style>
+</head>
+
+<body>
+  <nav>
+    <div class="nav-left">
+      <a href="index.html">Home</a>
+      <a href="computer-architecture.html">Computer Architecture</a>
+      <a href="circuits.html">Circuits</a>
+      <a href="product-management.html">Product Management</a>
+      <a href="personal-projects.html">Personal Projects</a>
+    </div>
+    <div class="nav-right">
+      <a href="https://github.com/YOURUSERNAME">GitHub</a>
+      <a href="mailto:you@email.com">Contact</a>
+    </div>
+  </nav>
+
+  <main class="wrap">
+    <section class="title">
+      <h1><span>Computer Architecture</span></h1>
+      <p>
+        Selected coursework + builds. Some details are intentionally limited while this portfolio is in progress.
+        <strong>Full project details available upon request.</strong>
+      </p>
+    </section>
+
+    <section class="card">
+      <h2>ALU (32-bit) — Structural Verilog</h2>
+      <p class="meta">
+        Built an ALU supporting AND, ADD, SUB, SLT, SRL, SRA, SLL with an 8:1 result mux and standard flags.
+        (This matches the “final 8:1 result mux” mapping: AND/ADD/SUB/SLT/SRL/SRA/SLL.) :contentReference[oaicite:0]{index=0}
+      </p>
+
+      <div class="pillrow">
+        <span class="pill">Verilog / SystemVerilog</span>
+        <span class="pill">Carry-Lookahead Adder (CLA)</span>
+        <span class="pill">Shifters: SRL/SRA/SLL</span>
+        <span class="pill">Flags: zero/equal/overflow</span>
+      </div>
+
+      <pre><code>`include "alu.svh"
+
+module STUDENT_alu(
+  input  logic [31:0] x,
+  input  logic [31:0] y,
+  input  logic [2:0]  op,
+  output logic [31:0] z,
+  output logic        zero, equal, overflow
+);
+
+  logic [31:0] z_and, z_add, z_sub, z_slt, z_srl, z_sra, z_sll;
+  logic cout_add, c31_add;
+  logic cout_sub, c31_sub, ov_sub;
+
+  // AND
+  and32 and_unit (.x(x), .y(y), .z(z_and));
+
+  // ADD via CLA (needs cout + c31 exposed by CLA) :contentReference[oaicite:1]{index=1}
+  CLA add_unit_cla (.a(x), .b(y), .cin(1'b0), .s(z_add), .cout(cout_add), .c31(c31_add));
+
+  // SUB via CLA: x + ~y + 1  (build ~y structurally) :contentReference[oaicite:2]{index=2}
+  logic [31:0] y_inv;
+  genvar i;
+  generate
+    for (i=0; i<32; i++) begin : invert_y
+      not n (y_inv[i], y[i]);
+    end
+  endgenerate
+  CLA sub_unit_cla (.a(x), .b(y_inv), .cin(1'b1), .s(z_sub), .cout(cout_sub), .c31(c31_sub));
+
+  // Overflow for SUB feeds SLT :contentReference[oaicite:3]{index=3}
+  overflow ov_sub_u (.c31(c31_sub), .cout(cout_sub), .ov(ov_sub));
+
+  // SLT uses SUB result + SUB overflow :contentReference[oaicite:4]{index=4}
+  slt32 slt_u (.z_sub(z_sub), .ov_sub(ov_sub), .z_slt(z_slt));
+
+  // Shifters (already implemented structurally in your project) :contentReference[oaicite:5]{index=5}
+  srl srl_u (.x(x), .y(y), .z(z_srl));
+  sra sra_u (.x(x), .y(y), .z(z_sra));
+  sll sll_u (.x(x), .y(y), .z(z_sll));
+
+  // Select ALU overflow based on op using 1-bit mux trees :contentReference[oaicite:6]{index=6}
+  logic c31_sel, cout_sel;
+  mux8_1bit_tree c31_mux (
+    .D0(1'b0), .D1(c31_add), .D2(c31_sub), .D3(1'b0),
+    .D4(1'b0), .D5(1'b0),    .D6(1'b0),    .D7(1'b0),
+    .S(op), .Y(c31_sel)
+  );
+  mux8_1bit_tree cout_mux (
+    .D0(1'b0), .D1(cout_add), .D2(cout_sub), .D3(1'b0),
+    .D4(1'b0), .D5(1'b0),     .D6(1'b0),     .D7(1'b0),
+    .S(op), .Y(cout_sel)
+  );
+  overflow ov_one (.c31(c31_sel), .cout(cout_sel), .ov(overflow));
+
+  // zero/equal flags :contentReference[oaicite:7]{index=7}
+  zero32 zero_on_result (.z(z), .zero(zero));
+  equal  eq_xy_u        (.a(x), .b(y), .equal(equal));
+
+  // Final 8:1 result mux mapping :contentReference[oaicite:8]{index=8}
+  mux8_32bit_tree result_mux (
+    .D0(z_and), .D1(z_add), .D2(z_sub), .D3(z_slt),
+    .D4(z_srl), .D5(z_sra), .D6(z_sll), .D7(32'b0),
+    .S(op), .Y(z)
+  );
+
+endmodule</code></pre>
+
+      <a class="back" href="index.html">← Back to Home</a>
+    </section>
+
+    <footer>© Giancarla Burgos · Built with GitHub Pages</footer>
+  </main>
 </body>
 </html>
