Update product proposal details in HTML file

--- a/product-management.html
+++ b/product-management.html
@@ -142,13 +142,19 @@
 <main class="wrap">
 
   <section class="hero">
-    <h1><span>Duolingo</span> — New Feature Proposal</h1>
+    <h1><span>Duolingo</span> — Sample Feature Proposal</h1>
     <p>
-      A product proposal for Duolingo's APM/SPM application focused on improving conversational fluency through peer interaction and community-driven engagement.
+      A sample product proposal for Duolingo focused on improving conversational fluency through peer interaction and community-driven engagement.
+    </p>
+    
+    <p style="margin-top:10px; font-size:0.95rem; color:#777;">
+      This project is an independent product proposal created for an application.
+      It is not affiliated with or endorsed by Duolingo.
     </p>
 
+    
     <!-- REPLACE WITH YOUR ACTUAL FIGMA LINK -->
-    <a class="button" href="https://your-figma-link-here.com" target="_blank">
+    <a class="button" href="https://pouch-reduce-00313430.figma.site/" target="_blank">
       View Figma Prototype →
     </a>
 
