Modify sewing project images and descriptions
Updated image sources and alt text for sewing projects.

--- a/personal-projects.html
+++ b/personal-projects.html
@@ -127,9 +127,10 @@
 
     <div class="gallery">
       <!-- REPLACE IMAGE FILE NAMES BELOW -->
-      <img src="images/sewing-1.jpg" alt="Sewing Project 1">
-      <img src="images/sewing-2.jpg" alt="Sewing Project 2">
-      <img src="images/sewing-3.jpg" alt="Sewing Project 3">
+      <img src="sewing-1.jpg" alt="My First Ever Sewing Project">
+      <img src="sewing-2.jpg" >
+      <img src="sewing-3.jpg" >
+
     </div>
   </section>
 
