Revise personal interests and sewing project title
Updated the description of personal interests and changed the section title for sewing projects.

--- a/personal-projects.html
+++ b/personal-projects.html
@@ -119,11 +119,11 @@
 
   <p>
     I’m an electrical engineering student passionate about building thoughtful technical systems across hardware and product.
-    Outside of engineering, I love sewing and redesigning garments from the thrift -- a creative outlet that strengthens my patience, attention to detail, and iterative design mindset.
+    Outside of engineering, I love the arts, especially sewing and redesigning garments -- a creative outlet that strengthens my patience, attention to detail, and iterative design mindset.
   </p>
 
   <section class="section">
-    <h2 style="color: var(--primary);">Sewing Projects</h2>
+    <h2 style="color: var(--primary);">My First Ever Sewing Project!</h2>
 
     <div class="gallery">
       <!-- REPLACE IMAGE FILE NAMES BELOW -->
