Fix greeting punctuation and improve work description
Updated greeting and refined work description.

--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
 
   <section class="hero">
     <h1>
-      Hi, I’m <span>Giancarla</span>.
+      Hi, I’m <span>Giancarla</span>!
     </h1>
     <p>
       I’m passionate about building thoughtful technical systems across hardware and product.
-      My work spans computer architecture, circuits, product management, and independent engineering projects.
+      My work thus far spans computer architecture, circuits, product management, and independent engineering projects.
     </p>
   </section>
 
